
Reloading your library after upgrading is always a good idea (though
it hasn't strictly been necessary since 0.10).

0.14 -
 * Internet radio / Shoutcast browser. (#88)
 * Album List separates albums with different labelids. (#198)
 * Ex Falso displays all available plugins in its menu. (#240)
 * Useful ~#lastplayed/~#added/~#mtime display thanks to Lalo Martins. (#262)
 * New Galician translation by Johám-Luís Miguéns Vila.

0.13.1 - People will fall for this for sure!
 * Fix playlist creation. (#250)
 * Unplay when no song is playing.

0.13 - So, um... let's- fletcherize?
 * The GStreamer backend is cleaned up, and is now the only backend.
   This results in lower background CPU usage and many fixes to
   our audio processing. Gapless playback is gone.
 * A play queue was added. (#69, #104)
 * A file system browser has been added. This can view, edit, and play
   files outside of your library. (#125)
 * The Paned Browser has a search entry. (#163)
 * Search Library lets you limit the number of results. (#166)
 * {{{~/.quodlibet/browsers}}} is now scanned for custom browsers.
 * Synthetic tags ('''~dirname''', '''~basename''', &c.) can be searched.
 * Similarly, synthetic tags can be used in the Paned Browser.
 * New synthetic tags, '''~people''' and '''~playlist'''.
 * If the tray icon is visible, closing QL's main window will minimize it.
   To actually quit, choose '''Quit''' from the Music menu or icon.
 * Search Library and the Album List search entry have tag completion. (#153)
 * Ex Falso supports plugins.
 * Updated Russian translation by Nikolai Prokoschenko and Sergey Fedoseev.
 * Updated French translation by Joshua Kwan.
 * Updated Finnish translation by Jari Rahkonen.
 * Updated Dutch translation by Hans van Dok.
 * Updated Hebrew translation by Roee Haimovich.

0.12 - focus ENTIRELY on the sexy bits.
 * New Mutagen ID3 reader/writer. (#3)
 * Experimental GStreamer backend. (#4)
 * Drag-and-drop to playlists. (#22, #23)